--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.3.1",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.38",
+        "flowbite": "^2.2.1",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.32",
         "sass": "^1.56.1",
-        "tailwindcss": "^3.4.1",
-        "vite": "^5.0.0"
-    },
-    "dependencies": {
-        "tw-elements": "^2.0.0"
+        "tailwindcss": "^3.3.6",
+        "vite": "^4.0.0",
+        "vite-plugin-copy": "^0.1.6"
     }
 }
